src/App.css
@import url('../node_modules/@fortawesome/fontawesome-free/css/all.css');

.App {
  text-align: center;
  font-family: 'Courier New', Courier, monospace;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  flex: 1;
}

h1 {
  font-size: 3vw;
}

/* Repos */

.repos-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin: 40px;
}

.repo {
  padding: 10px;;
}

.card-body {
  height: 100%;
  border: solid;
  border-color: grey;
  border-radius: 5%;
}

.card-title {
  font-size: 1.5vw;
}

.card-link {
  right: 33%;
  text-decoration: none;
  color: #282c34;
}

.card-body:hover {
  background-color: black;
  color: white;
}

.favourites {
}

/* User */

.user-picture {
  border-radius: 50%;
  max-width: 25%;
}

.user-link {
  text-decoration: none;
  color: black;
  font-weight: bold;
  font-size: larger;
}

/* Navbar */

.navbar {
  display: flex;
  line-height: 1.5;
  color: white;
  background-color: black;
  justify-content: space-evenly;
  align-items: center;
}

.search-button {
  color: white;
  size: 100%;
  background-color: black;
}

.search-button:hover {
  color:#000000;
  background-color:#FFFFFF;
}

/* Footer  */

.footer {
  bottom: 0;
  background: black;
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 100px;
  padding: 0px 50px;
  color: white;
}
.footer-links {
  display: flex;
  align-items: center;
}
.footer-links a {
  color: white;
  opacity: 0.15;
  text-decoration: none;
  font-size: 24px;
  padding: 0px 10px;
}
.footer-links a:hover {
  opacity: 1;
}
.footer .fa-heart {
  color: #D23333;
}

